--- a/static/wpsc.css
+++ b/static/wpsc.css
@@ -16,6 +16,12 @@ td.red {
     color: #c7254e;
     display: none;
 }
+.contact {
+    margin: 12px 0;
+    color: #666;
+    text-align: center;
+    font-size: 8pt;
+}
 
 /* ts */
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
