--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <div class="container-index">
         <p>
             <strong>Windows Phone Store Checker</strong> lets you compare the name, price
-            and availability of all apps in the Windows Phone Store among all countries.
+            and availability of all apps in the Windows Phone Store across all countries.
         </p>
         <form class="form-search" id="search">
             <div class="input-group">
