--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,4 +25,4 @@
             {% block content %}{% endblock %}
         </div><!-- /.container -->
 
-        <p class="contact">Results are cached for 15 minutes — Questions? <span id="email"></span></p>
+        <p class="contact">Results are cached for one hour — Questions? <span id="email"></span></p>
