--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='wpsc.css') }}">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="{{ url_for('static', filename='jquery.tablesorter.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='wpsc.js') }}"></script>
+        <script src="{{ url_for('static', filename='wpsc.js') }}?a"></script>
         <title>
             Windows Phone Store Checker
         </title>
